--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.7)
-project(Test1)
+cmake_minimum_required(VERSION 2.8.8)
+project(IJST)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -8,4 +8,6 @@ include_directories(include)
 set(SOURCE_FILES
         main.cpp
         )
-add_executable(Test1 ${SOURCE_FILES})
+add_executable(IJST ${SOURCE_FILES})
+
+add_subdirectory(unit_test)
