Change serialize process to new buffer model.

--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -12,7 +12,7 @@ set(TEST_OUTPUT unit_test)
 set(TEST_SRC
         basic_api_test.cpp
         serialize_test.cpp
-#        deserialize_test.cpp
+        deserialize_test.cpp
         primitive_test.cpp
         )
 # NOTE: Please check output target here
