Remove Reset interface. Add SetAllocator interface. Refactor: change buffer and allocator API name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(IJST)
 
 set(CMAKE_CXX_STANDARD 11)
 
+#TODO: inlucde gTest and rapidjson as third party
 include_directories(include)
 
 add_subdirectory(unit_test)
