Fix compiler warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8.8)
 project(IJST)
 
 set(CMAKE_CXX_STANDARD 11)
+add_definitions(-Wall)
 
 include_directories(
         include
