Add a macro option IJST_USE_SL_WRAPPER

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(IJST)
 
 set(CMAKE_CXX_STANDARD 11)
 add_definitions(-Wall)
+#add_definitions(-DIJST_USE_SL_WRAPPER)
 #add_definitions(-ftime-report)
 
 include_directories(
