--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(IJST)
 set(CMAKE_CXX_STANDARD 11)
 add_definitions(-Wall)
 #add_definitions(-DIJST_USE_SL_WRAPPER)
+#add_definitions(-DIJST_ENABLE_TO_JSON_STRUCT)
 #add_definitions(-ftime-report)
 
 include_directories(
