API CHANGE: change IJST_TOBJ to IJST_TST

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(IJST)
 set(CMAKE_CXX_STANDARD 11)
 add_definitions(-Wall)
 add_definitions(-Wunused-parameter)
-#add_definitions(-DIJST_ENABLE_TO_JSON_OBJECT)
-#add_definitions(-DIJST_ENABLE_FROM_JSON_OBJECT)
+add_definitions(-DIJST_ENABLE_TO_JSON_OBJECT)
+add_definitions(-DIJST_ENABLE_FROM_JSON_OBJECT)
 #add_definitions(-ftime-report)
 
 include_directories(
