--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ matrix:
   include:
     #--- gcc
     # old gcc
-    - env: ARCH_FLAGS=-m64 CXX_VER=98 CXX_FLAG=g++-4.4 C_FLAG=gcc-4.4
+    - env: ARCH_FLAGS=-m64 CXX_VER=98 CXX_VERSION=g++-4.4 C_VERSION=gcc-4.4
       compiler: gcc
       addons:
         apt:
           packages:
             - g++-4.4
-    - env: ARCH_FLAGS=-m32 CXX_VER=98 CXX_FLAG=g++-4.4 C_FLAG=gcc-4.4
+    - env: ARCH_FLAGS=-m32 CXX_VER=98 CXX_VERSION=g++-4.4 C_VERSION=gcc-4.4
       compiler: gcc
       addons:
         apt:
@@ -87,19 +87,19 @@ matrix:
             - g++-multilib
 
 script:
-  - if [ "$CXX"x = "clang++"x ]; then export CXXFLAGS="-stdlib=libc++ ${CXXFLAGS}"; fi
-  - if [ ! "$CXX_FLAG"x = ""x ]; then export CXX=${CXX_FLAG}; fi
-  - if [ ! "$C_FLAG"x = ""x ]; then export CC=${C_FLAG}; fi
-  - export CXXFLAGS="-Werror ${CXXFLAGS}";
+  - if [ "${CXX}"x = "clang++"x ]; then export CXXFLAGS="-stdlib=libc++ ${CXXFLAGS}"; fi
+  - if [ ! "${CXX_VERSION}"x = ""x ]; then export CXX="${CXX_VERSION}"; fi
+  - if [ ! "${C_VERSION}"x = ""x ]; then export CC="${C_VERSION}"; fi
+  - export CXXFLAGS="-Werror ${ARCH_FLAGS} ${CXXFLAGS}";
   - mkdir build
   - cd build
   - >
       (cmake
       -DCMAKE_VERBOSE_MAKEFILE=ON
-      -DCMAKE_CXX_STANDARD=$CXX_VER
-      -DCMAKE_CXX_FLAGS=$ARCH_FLAGS
-      -DCMAKE_CXX_COMPILER=$CXX
-      -DCMAKE_C_COMPILER=$CC
+      -DCMAKE_CXX_STANDARD="${CXX_VER}"
+      -DCMAKE_CXX_FLAGS="${CXXFLAGS}"
+      -DCMAKE_CXX_COMPILER="${CXX}"
+      -DCMAKE_C_COMPILER="${CC}"
       -DCMAKE_BUILD_TYPE=Release
       ..)
   - make -j 2
