Refactor: move details to detail.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ if(NOT DEFINED CMAKE_CXX_STANDARD)
     set(CMAKE_CXX_STANDARD 11)
 endif()
 
-SET(CMAKE_VERBOSE_MAKEFILE ON)
 if (MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS=1)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
@@ -21,6 +20,7 @@ else()
     add_definitions(-Wunused-parameter)
 endif()
 #add_definitions(-ftime-report)
+#SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 if (WIN32 AND (NOT CYGWIN) AND (NOT MINGW))
     set(gtest_disable_pthreads ON)
